--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -1,8 +1,8 @@
 ﻿<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-<link href='css/tass.css' rel='stylesheet' type='text/css'>
-<script src="Scripts/typings/jquery/jquery-2.1.4.min.js"></script>
-<script src="bower_components/polymer-ts/polymer-ts.js"></script>
 
+<script src="Scripts/typings/jquery/jquery-2.1.4.min.js"></script>
+<!-- Polymer Imports-->
+<script src="bower_components/polymer-ts/polymer-ts.js"></script>
 <link href="bower_components/iron-icons/iron-icons.html" rel="import">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
 <link rel="import" href="bower_components/paper-button/paper-button.html">
@@ -27,26 +27,18 @@
 
 
 
-<!-- leaflet -->
+<!-- leaflet imports -->
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 <script  src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-<!-- Leaflet GeoManager-->
+<!-- Leaflet GeoManager imports-->
 <!--<script src="http://j.maxmind.com/app/geoip.js"></script>-->
 <script src="components/date.format/date.format.js"></script>
-
-
-
-
-
-
-
 <script src="components/jquery.select2/select2.js"></script>
 <script src="components/leaflet.label/leaflet.label-src.js"></script>
 <script src="components/leaflet.geomanager/layers/google.js"></script>
 <script src="components/leaflet.geomanager/layers/bing.js"></script>
 <script src="components/leaflet.geomanager/layers/wikimapia.js"></script>
 <script src="components/leaflet.geomanager/leaflet.geomanager.js"></script>
-
 <script src="components/leaflet.geomanager/layers/yandex.js"></script>
 
 
@@ -57,9 +49,15 @@
 <script src="ru/flaps/data/RequestVO.js"></script>
 <script src="ru/flaps/data/ResponseVO.js"></script>
 
+
+
+
+
+
+<!-- MapsGe imports-->
 <script src="ge/mymaps/map/data/MapType.js"></script>
 <script src="ge/mymaps/map/data/MapTypesProvider.js"></script>
 
 <link rel="import" href="ge/mymaps/map/view/MapTypeList.html" />
 <link rel="import" href="ge/mymaps/map/view/TbilisiMapView.html" />
-
+<link rel="import" href="ge/mymaps/map/MapsGeFacade.html" />
