--- a/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <script src="../../../../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-        <link rel="import" href="../../../../bundle.html">
+        <script src="../../../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+        <link rel="import" href="../../../bundle.html">
         <title>MapTypes</title>
         <style>
             body{
