--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -25,6 +25,13 @@
 <link rel="import" href="bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="bower_components/neon-animation/animations/fade-out-animation.html">
 
+<link rel="import" href="bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
+
+
 
 
 <!-- leaflet imports -->
@@ -41,7 +48,20 @@
 <script src="components/leaflet.geomanager/leaflet.geomanager.js"></script>
 <script src="components/leaflet.geomanager/layers/yandex.js"></script>
 
+<script src="https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.standalone.js"></script>
+<link href='https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet' />
 
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+
+
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.min.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.mapbox.css' rel='stylesheet' />
+<!--[if lt IE 9]>
+  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.ie.css' rel='stylesheet' />
+<![endif]-->
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
 
 <script src="ru/flaps/events/EventDispatcher.js"></script>
 <script src="ru/flaps/data/ObjectVO.js"></script>
@@ -50,14 +70,16 @@
 <script src="ru/flaps/data/ResponseVO.js"></script>
 
 
-
+<script src="ge/mymaps/map/utils/Locator.js"></script>
 
 
 
 <!-- MapsGe imports-->
 <script src="ge/mymaps/map/data/MapType.js"></script>
 <script src="ge/mymaps/map/data/MapTypesProvider.js"></script>
+<script src="ge/mymaps/map/data/GeMapObject.js"></script>
+<script src="ge/mymaps/map/data/GeOrganization.js"></script>
 
 <link rel="import" href="ge/mymaps/map/view/MapTypeList.html" />
-<link rel="import" href="ge/mymaps/map/view/TbilisiMapView.html" />
+<link rel="import" href="ge/mymaps/map/view/GeMapView.html" />
 <link rel="import" href="ge/mymaps/map/MapsGeFacade.html" />
