--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -32,7 +32,12 @@
 <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
 
 
+<!-- Bing maps by microsoft -->
+<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
 
+
+<!-- yandex api -->
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 
 <!-- leaflet imports -->
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
@@ -42,12 +47,7 @@
 <script src="components/date.format/date.format.js"></script>
 <script src="components/jquery.select2/select2.js"></script>
 <script src="components/leaflet.label/leaflet.label-src.js"></script>
-<script src="components/leaflet.geomanager/layers/google.js"></script>
-<script src="components/leaflet.geomanager/layers/bing.js"></script>
-<script src="components/leaflet.geomanager/layers/wikimapia.js"></script>
-<script src="components/leaflet.geomanager/leaflet.geomanager.js"></script>
-<script src="components/leaflet.geomanager/layers/yandex.js"></script>
-
+<script src="components/leaflet.geomanager/geoman.all.min.js"></script>
 <script src="https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.standalone.js"></script>
 <link href='https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet' />
 
