--- a/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
@@ -31,6 +31,11 @@
                 if (obj == null) {
                     if (mapFacade == null) {
                         mapFacade = document.getElementById('mapFacade');
+                        mapFacade.showMapUI = false;
+                        var mapTypes = mapFacade.mapView.mapTypesProvider.types;
+                        mapFacade.mapView.mapTypesProvider.mapType = mapTypes[4];
+                        mapFacade.mapView.zoom = 4;
+                        console.log();
                         mapFacade.addEventListener(ge.mymaps.map.view.GeMapView.LONG_PRESS, longPressHandler)
                     }
                     var i = 0;
