--- a/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
@@ -31,9 +31,17 @@
                 if (obj == null) {
                     if (mapFacade == null) {
                         mapFacade = document.getElementById('mapFacade');
+                        // hide my UI
                         mapFacade.showMapUI = false;
+
+                        // get available map types
                         var mapTypes = mapFacade.mapView.mapTypesProvider.types;
-                        mapFacade.mapView.mapTypesProvider.mapType = mapTypes[4];
+
+                        //Every type is an instance of @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/data/MapType.ts
+                        // set your type into mapView
+                        mapFacade.mapView.mapTypesProvider.mapType = mapTypes[2];
+
+                        // change Zoom of map. listen for events to enable/disable your buttons @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.ts
                         mapFacade.mapView.zoom = 4;
                         console.log();
                         mapFacade.addEventListener(ge.mymaps.map.view.GeMapView.LONG_PRESS, longPressHandler)
