--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -37,7 +37,7 @@
 
 
 <!-- yandex api -->
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script src="https://api-maps.yandex.ru/2.1/?load=package.map&lang=ru_RU" type="text/javascript"></script>
 
 <!-- leaflet imports -->
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
@@ -70,6 +70,9 @@
 <script src="ru/flaps/data/ResponseVO.js"></script>
 
 
+
+<script src="ru/flaps/uihelpers/RoundProgress.js"></script>
+
 <script src="ge/mymaps/map/utils/Locator.js"></script>
 
 
@@ -83,3 +86,13 @@
 <link rel="import" href="ge/mymaps/map/view/MapTypeList.html" />
 <link rel="import" href="ge/mymaps/map/view/GeMapView.html" />
 <link rel="import" href="ge/mymaps/map/MapsGeFacade.html" />
+
+
+<!--CDN links for the latest TweenLite, CSSPlugin, and EasePack-->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/easing/EasePack.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
+
+
+<link rel="stylesheet" href="components/leaflet-routing/leaflet-routing-machine.css" />
+<script src="components/leaflet-routing/leaflet-routing-machine.js"></script>
