--- a/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
@@ -23,9 +23,12 @@
             <script>
                 function longPressHandler(e) {
                     console.log('Long press emited')
-                    console.log(e);
+                    console.log(e.detail.lat+':'+e.detail.lng);
                 }
-
+                function markerPressHandler(e) {
+                    console.log('Marker press emited')
+                    console.log(e.detail.lat + ':' + e.detail.lng + '    -  ' + e.detail.distance); //e.details is ge.mymaps.map.data.GeOrganization
+                }
                 var obj;
                 var mapFacade
                 function fnc() {
@@ -45,7 +48,9 @@
                             // change Zoom of map. listen for events to enable/disable your buttons @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.ts
                             mapFacade.mapView.zoom = 4;
                             console.log();
-                            mapFacade.addEventListener(ge.mymaps.map.view.GeMapView.LONG_PRESS, longPressHandler)
+                            mapFacade.mapView.addEventListener(ge.mymaps.map.view.GeMapView.LONG_PRESS, longPressHandler)
+                            mapFacade.mapView.addEventListener(ge.mymaps.map.view.GeMapView.MARKER_PRESS, markerPressHandler)
+
                         }
                         var i = 0;
                         while (i < 100) {
