last commit fron David's office

--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -73,9 +73,16 @@
 
 <script src="ru/flaps/uihelpers/RoundProgress.js"></script>
 
+
+<script src="ge/mymaps/map/events/LongPressDetail.js"></script>
+<script src="ge/mymaps/map/events/MarkerPressDetail.js"></script>
+
+
 <script src="ge/mymaps/map/utils/Locator.js"></script>
+<script src="ge/mymaps/map/utils/Locale.js"></script>
 
-
+<script src="ge/mymaps/map/utils/Geocoder.js"></script>
+<script src="ge/mymaps/map/utils/Router.js"></script>
 
 <!-- MapsGe imports-->
 <script src="ge/mymaps/map/data/MapType.js"></script>
