New sommit for Beka's debug

--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -88,6 +88,7 @@
 <script src="ge/mymaps/map/data/MapType.js"></script>
 <script src="ge/mymaps/map/data/MapTypesProvider.js"></script>
 <script src="ge/mymaps/map/data/GeMapObject.js"></script>
+<script src="ge/mymaps/map/data/MarkerMapObject.js"></script>
 <script src="ge/mymaps/map/data/GeOrganization.js"></script>
 
 <link rel="import" href="ge/mymaps/map/view/MapTypeList.html" />
