locatio interface for external UI

--- a/MyMapsGeTypeScript/bundle.html
+++ b/MyMapsGeTypeScript/bundle.html
@@ -2,6 +2,7 @@
 
 <script src="Scripts/typings/jquery/jquery-2.1.4.min.js"></script>
 <!-- Polymer Imports-->
+<script src="bower_components/polymer/polymer.html"></script>
 <script src="bower_components/polymer-ts/polymer-ts.js"></script>
 <link href="bower_components/iron-icons/iron-icons.html" rel="import">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
@@ -90,6 +91,7 @@
 <script src="ge/mymaps/map/data/GeMapObject.js"></script>
 <script src="ge/mymaps/map/data/MarkerMapObject.js"></script>
 <script src="ge/mymaps/map/data/GeOrganization.js"></script>
+<script src="ge/mymaps/map/data/LocatorMapObject.js"></script>
 
 <link rel="import" href="ge/mymaps/map/view/MapTypeList.html" />
 <link rel="import" href="ge/mymaps/map/view/GeMapView.html" />
