--- a/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/MapsGeFacade-test.html
@@ -38,29 +38,38 @@
                 }
                 var obj;
                 var mapFacade
+                window.flag = false
+                function getMapFacade() {
+                    if (mapFacade == null) {
+                        mapFacade = document.getElementById('mapFacade');
+                        return mapFacade
+                    }
+                }
+
                 function fnc() {
-                    if (obj == null) {
-                        if (mapFacade == null) {
-                            mapFacade = document.getElementById('mapFacade');
-                            // hide my UI
-                            mapFacade.showMapUI = false;
+                    debugger
+                    if (! window.flag ) {
+                        window.flag = true
+                        getMapFacade()
+                        // hide my UI
+                        mapFacade.showMapUI = false;
 
-                            // get available map types
-                            var mapTypes = mapFacade.mapView.mapTypesProvider.types;
+                        // get available map types
+                        var mapTypes = mapFacade.mapView.mapTypesProvider.types;
 
-                            //Every type is an instance of @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/data/MapType.ts
-                            // set your type into mapView
-                            mapFacade.mapView.mapTypesProvider.mapType = mapTypes[2];
+                        //Every type is an instance of @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/data/MapType.ts
+                        // set your type into mapView
+                        mapFacade.mapView.mapTypesProvider.mapType = mapTypes[2];
 
-                            // change Zoom of map. listen for events to enable/disable your buttons @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.ts
-                            mapFacade.mapView.zoom = 4;
-                            console.log();
+                        // change Zoom of map. listen for events to enable/disable your buttons @see https://github.com/FlaPS/map.mymaps.ge/blob/master/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.ts
+                        mapFacade.mapView.zoom = 4;
+                        console.log();
               
-                            mapFacade.mapView.addEventListener(ge.mymaps.map.view.GeMapView.LONG_PRESS, longPressHandler)
-                            mapFacade.mapView.addEventListener(ge.mymaps.map.view.GeMapView.MARKER_PRESS, markerPressHandler)
-                         //   setTimeout(changeLocation, 2000)
-                            ge.mymaps.map.utils.Locale.instance.language = ge.mymaps.map.utils.Locale.GE;
-                        }
+                        mapFacade.mapView.addEventListener(ge.mymaps.map.view.GeMapView.LONG_PRESS, longPressHandler)
+                        mapFacade.mapView.addEventListener(ge.mymaps.map.view.GeMapView.MARKER_PRESS, markerPressHandler)
+                        //   setTimeout(changeLocation, 2000)
+                        ge.mymaps.map.utils.Locale.instance.language = ge.mymaps.map.utils.Locale.GE;
+                        
                         var i = 0;
                         while (i < 100) {
                             obj = new ge.mymaps.map.data.GeOrganization(i + 1, 'name of orgaization ' + i, 41.5 + Math.random() * 0.5, 44.5 + Math.random() * 0.5)
@@ -72,6 +81,12 @@
                         obj = null;
                         mapFacade.clearOrganizations();
                     }
+                }
+
+                function locate()
+                {
+                    console.log('call change location');
+                    mapFacade.moveToLocation()
                 }
                 function centerChangedHandler()
                 {
@@ -85,6 +100,7 @@
             </script>
             <div style="position:absolute">
                 <input type="button" value="Switch" onclick="fnc()" />
+                <input type="button" value="Location" onclick="locate()" />
             </div>
 </body>
  </html>
